--- a/microservices/msclientes/build.gradle
+++ b/microservices/msclientes/build.gradle
@@ -32,8 +32,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	//TODO: Incluir dependencia ModelMapper descomentando a linha abaixo
-//	implementation 'org.modelmapper:modelmapper:3.2.1'
+	implementation 'org.modelmapper:modelmapper:3.2.1'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
