--- a/microservices/msclientes/src/main/resources/application.yml
+++ b/microservices/msclientes/src/main/resources/application.yml
@@ -1,13 +1,20 @@
 spring:
   application:
     name: msclientes
+  datasource:
+    url: jdbc:h2:mem:fatec
+    username: aluno
+    password: segredo
+    driverClassName: org.h2.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
 
 server:
-  port: 0
+  port: 8080
 
-eureka:
-  client:
-    service-url:
-      defalttZone: http://localhost:8761/eureka
-  instance:
-    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+#eureka:
+#  client:
+#    service-url:
+#      defalttZone: http://localhost:8761/eureka
+#  instance:
+#    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
